Closed
Bug 476596
Opened 17 years ago
Closed 17 years ago
Malware "why is this site blocked" button does not take me to safebrowsing diagnostic page
Categories
(Camino Graveyard :: Security, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino2.0
People
(Reporter: alqahira, Assigned: chris)
References
()
Details
Attachments
(1 file, 1 obsolete file)
|
9.03 KB,
patch
|
stuart.morgan+bugzilla
:
superreview+
|
Details | Diff | Splinter Review |
STR:
1) Visit a malware site (or test site, like http://ianfette.org/)
2) Click "Why is this site blocked?" button
ER: End up on http://www.google.com/safebrowsing/diagnostic?site=http://www.ianfette.org/&hl=en (or some permutation thereof)
AR: End up on http://www.mozilla.com/en-US/firefox/phishing-protection/
The phishing button should end up at the mozilla.com page (until we fix bug 451092), but the malware button should not.
Flags: camino2.0b2?
| Assignee | ||
Comment 1•17 years ago
|
||
Adds a |showMalwareDiagnosticInformation| method to BWC that sends the user to the Google malware page for the current site. Uses the same Firefox pref name and value (after filling in the placeholders).
Comment 2•17 years ago
|
||
Comment on attachment 374538 [details] [diff] [review]
Fix v1.0
Looks great Hendy, r=me. Very sorry it took me so long to get to this!
The #import line fails to patch successfully with the latest BWC source. Since my delay is the reason, I'm attaching a refreshed patch...
Attachment #374538 -
Flags: review?(murph) → review+
Comment 3•17 years ago
|
||
Just refreshed Hendy's patch to fix a failed #import line hunk.
Attachment #374538 -
Attachment is obsolete: true
Attachment #376760 -
Flags: superreview?(stuart.morgan+bugzilla)
| Assignee | ||
Comment 4•17 years ago
|
||
Thanks for the review, Sean. Your refreshed patch will apply if the patch for Bug 475201 has been checked in, but it's in and out of the tree. My original patch can be applied when the other patch has not been checked in (which is most of the time at the moment).
Comment 5•17 years ago
|
||
Comment on attachment 376760 [details] [diff] [review]
Refreshed Patch v1.0
>+ [filledURL replaceOccurrencesOfString:@"{moz:client}"
>+ withString:[XULAppInfo name]
>+ options:NULL
>+ range:NSMakeRange(0, [filledURL length])];
>+ [filledURL replaceOccurrencesOfString:@"{moz:locale}"
>+ withString:locale
>+ options:NULL
>+ range:NSMakeRange(0, [filledURL length])];
The :-alignment needs fixing here.
sr=smorgan with that change (for whichever version). However, if this conflicts with the flashblock bug let's not land this yet, since I don't want to force a respin of that patch to add to all its other woes ;)
Attachment #376760 -
Flags: superreview?(stuart.morgan+bugzilla) → superreview+
| Reporter | ||
Comment 6•17 years ago
|
||
(In reply to comment #5)
> sr=smorgan with that change (for whichever version). However, if this conflicts
> with the flashblock bug let's not land this yet, since I don't want to force a
> respin of that patch to add to all its other woes ;)
I've been maintaining an up-to-date version of that patch already, so I'll just update my version to unbitrot it and land this bug; heaven knows the fewer ready patches not landed, the better.
| Reporter | ||
Comment 7•17 years ago
|
||
Checked in with the : all lined up.
I'll file another bug (or comment in an existing one, if I can find an appropriate one) about making the phishing "why was this site blocked" URL point somewhere else when we have the somewhere else ready.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Flags: camino2.0b3? → camino2.0b3+
Resolution: --- → FIXED
Target Milestone: --- → Camino2.0
You need to log in
before you can comment on or make changes to this bug.
Description
•