Bug 476596 -  Malware 'why is this site blocked' button does not take me to safebrowsing diagnostic page. Patch by Christopher Henderson <trendyhendy2000@gmail.com>, r=murph, sr=smorgan