camino/src/preferences/GeckoPrefConstants.mm
@@ -209,6 +209,7 @@ NSString* const kGeckoPrefSafeBrowsingDataProviderReportURL = @"browser.safebrow
 NSString* const kGeckoPrefSafeBrowsingDataProviderGetHashURL = @"browser.safebrowsing.provider.%i.gethashURL";
 
 const char* const kGeckoPrefSafeBrowsingInformationURL = "browser.safebrowsing.warning.infoURL";
+const char* const kGeckoPrefSafeBrowsingMalwareDiagnosticURL = "browser.safebrowsing.malware.reportURL";
 const char* const kGeckoPrefSafeBrowsingPhishingCheckingEnabled = "browser.safebrowsing.enabled";
 const char* const kGeckoPrefSafeBrowsingMalwareCheckingEnabled = "browser.safebrowsing.malware.enabled";
 const char* const kGeckoPrefSafeBrowsingDataProvider = "browser.safebrowsing.dataProvider";
